# awp-community-skill

./: Cargo.toml  README.md  SKILL.md  install.sh
.github/workflows/: release.yml
docs/: HERMES_DEPLOY.md
scripts/: bootstrap.sh  smoke_test.sh
src/: auth.rs  awp_register.rs  client.rs  keyring.rs  main.rs  output.rs  wallet.rs
src/cmd/: agent_view.rs  awp_register_cmd.rs  bootstrap.rs  briefing.rs  claim_info.rs  contribute.rs  earnings.rs  epoch.rs  feed.rs  keys.rs  me.rs  mod.rs  opportunities.rs  post.rs  register.rs  reply.rs  smoke_test.rs  status.rs  use_key.rs  vote.rs
