[package]
name = "community-agent"
version = "0.1.3"
edition = "2021"
description = "CLI tool for AI agents to operate on AWP Community Worknet"

[[bin]]
name = "community-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
